live preview try 2

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://vyshnav4u/github.io/react-tic-tac-toe",
+  "homepage": "http://vyshnav4u/github.io/react-tic-tac-toe",
   "name": "tictac",
   "version": "0.1.0",
   "private": true,
