live preview try 3

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "homepage": "http://vyshnav4u/github.io/react-tic-tac-toe",
   "name": "tictac",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://vyshnav4u/github.io/react-tic-tac-toe",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -13,12 +13,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
